sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/forgejo/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo
  namespace: forgejo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/instance: forgejo
  ingress:
    # Allow HTTP traffic from Traefik Private & Runners
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
        - matchLabels:
            io.kubernetes.pod.namespace: forgejo-runner
            app.kubernetes.io/name: actions-runner
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    # Allow SSH traffic from Traefik Private
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
            - port: "2222"
              protocol: TCP
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow connections to Postgres (CNPG)
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: forgejo-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow connections to Valkey / internal caching in same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: forgejo
    # Allow connections to internal Authentik service
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/component: server
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    # Allow egress to Traefik Public (Internal Ingress for SSO/OIDC)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-public
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow connections to external services
    - toFQDNs:
        - matchName: "github.com"
        - matchName: "api.github.com"
        - matchName: "codeload.github.com"
        - matchName: "www.gravatar.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-db
  namespace: forgejo
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: forgejo-db
  ingress:
    # Allow traffic from Forgejo app
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo
            app.kubernetes.io/instance: forgejo
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow intra-cluster DB communication
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: forgejo-db
    # Allow traffic from CloudNativePG operator for health checks
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "5432"
              protocol: TCP

    # Allow VictoriaMetrics to scrape metrics
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # Allow intra-cluster DB communication
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: forgejo-db
    # Allow access to K8s API
    - toEntities:
        - kube-apiserver
    # Allow egress to S3 for Barman backups
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
